--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,6 +4,6 @@
     <title><%= title %></title>
   </head>
   <body>
-    <h1><%= title %></h1>
+    <img src="img/bu.png" alt="Coming Soon">
   </body>
 </html>
